--- a/front-end/src/navBar.css
+++ b/front-end/src/navBar.css
@@ -1,11 +1,11 @@
 .navBarContainer{
     width: 100%;
-    margin-top: 0px;
+    
 }
 .navBarContainerFirst{
    width: 100%;
    height: 500px;
-   background: url(../public/images/air-jordan-4-red-metallic-release-date.jpg) no-repeat;
+   background:url(../public/images/air-jordan-4-red-metallic-release-date.jpg) no-repeat;
    background-position-y: -370px;
    background-position-x: 400px;
    background-color: whitesmoke;
@@ -31,4 +31,73 @@
     color: white;
     cursor: pointer;
     
+}
+
+@media screen and (max-width:1000px) {
+    .navBarContainerFirst .navBarContainerSecondone{
+        width: 100%;
+        padding-top: 100px;
+        padding-left: 50px;
+    }
+    .navBarContainerFirst{
+        width: 100%;
+        height: 500px;
+        background:url(../public/images/air-jordan-4-red-metallic-release-date.jpg) no-repeat center/contain;
+        background-position-x: 400px;
+        background-color: whitesmoke;
+       
+     }
+}
+
+@media screen and (max-width:800px) {
+    .navBarContainerFirst{
+        width: 100%;
+        height: 500px;
+        background:linear-gradient(rgba(255,255,255,0.5),rgba(0,0,0,0.5)), url(../public/images/air-jordan-4-red-metallic-release-date.jpg) no-repeat center/cover;
+        background-color: whitesmoke;
+       
+     }
+
+     .navBarContainerFirst .navBarContainerSecondone{
+        width: 100%;
+        padding-top: 200px;
+        padding-left: 50px;
+    }
+
+    .navBarContainerFirst .navBarContainerSecondone h1{
+        color: white;
+    }
+    .navBarContainerFirst .navBarContainerSecondone p{
+        width: 60%;
+        text-align: left;
+        color: white;
+
+    }
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:600px) {
+    
+
+     .navBarContainerFirst .navBarContainerSecondone{
+        width: 100%;
+        padding-top: 100px;
+        padding-left: 10px;
+    }
+
+    .navBarContainerFirst .navBarContainerSecondone h1{
+        font-size: 20px;
+    }
+    .navBarContainerFirst .navBarContainerSecondone p{
+        width: 90%;
+        font-size: 15px;
+    }
 }
